--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
@@ -36,8 +34,15 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
+# example app
 app-example
 
 # generated native folders
 /ios
 /android
+
+# Convex generated files
+convex/_generated/
+
+# VS Code settings
+.vscode/
